--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,877 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:wght@300;400;500;600;700&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-smooth: always;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*, *::after, *::before {
+   box-sizing: border-box;
+ }
+
+body {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  /* background: radial-gradient(circle at center, #1083bb, #1073bb, #1066bc); */
+  color: #00476a;
+  background-color: rgba(252, 252, 250,0.3);
+  overflow-x: hidden;
+}
+
+#results {
+  margin-top: 1em;
+  text-align: center;
+}
+
+header {
+  text-align: center;
+  color: #00476a;
+}
+
+header h1 {
+  font-size: 32px;
+}
+h2 {
+  color: #00476a;
+  font-size: 20px;
+}
+
+h3 {
+  font-size: 1em;
+}
+
+sub {
+  color: #1083bb;
+}
+.lightText {
+  font-weight: 300;
+}
+
+
+header a {
+  text-decoration: none;
+  color: #00476a;
+}
+header a:hover {
+  color: #00476a;
+}
+
+a {
+  text-decoration: none;
+  color:#1083bb;
+  transition: all 300ms ease-out;
+}
+
+a:hover {
+  color: #0c6e9e;
+
+}
+
+.small-margin-top {
+    margin-top: 24px !important;
+}
+
+.med-margin-top {
+    margin-top: 32px !important;
+}
+
+.big-margin-top {
+    margin-top: 48px !important;
+}
+
+.center {
+    text-align: center;
+}
+
+
+
+hr {
+  border: 0;
+  height: 1px;
+  width: 100%;
+  background-image: linear-gradient(to right, rgba(221, 221, 221,.75), rgba(221, 221, 221,.95), rgba(221, 221, 221,.75));
+}
+ hr.special {
+  border: 0;
+  height: 1px;
+  width: 100%;
+  background-image: linear-gradient(to right, rgb(252, 192, 42, 0), rgba(252, 192, 42, 0.75), rgba(252, 192, 42, 0));
+}
+
+button {
+  font-size: .8em;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  height: 3em;
+  padding: 0em 2em;
+  border-radius: 4px;
+  border: 0;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.1);
+  color: white;
+  background-color: #fdc02a;
+  cursor: pointer;
+  transition: all 0.2s ease-out 0s;
+  -webkit-transition: all 0.2s ease-out 0s;
+}
+
+
+button:hover {
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    transform:scale(0.96)
+
+}
+
+button:focus {
+    outline: none;
+    border: none;
+}
+
+.button-outline {
+    margin-top: 2em;
+    padding: 12px;
+    background-color: transparent;
+    color: grey;
+    border-radius: 8px;
+    box-shadow: none;
+    border: 2px solid lightgrey
+}
+
+.outline-button {
+    margin-top: 12px;
+    padding: 9px 12px;
+    border-radius: 6px;
+    box-shadow: none;
+    border: 2px solid white;
+    transition: all 0.2s ease-out 0s;
+        -webkit-transition: all 0.2s ease-out 0s;
+}
+
+.dark {
+    color: #045780;
+    border-color: #045780;
+    background-color: white;
+}
+
+.dark:hover {
+    color: white;
+    background-color: #045780;
+}
+
+.grey {
+    color: grey;
+    border: 2px solid lightgrey;
+}
+
+.grey:hover {
+    color: grey;
+    border-color: grey;
+}
+
+.white {
+    color: white;
+    border-color: white;
+}
+
+.white:hover {
+    background-color: white;
+    color: #045780;
+}
+
+
+.left-align {
+    margin-left: 5px;
+    margin-right: auto;
+
+}
+
+.center {
+    text-align: center;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.alert-message {
+    background-color: white;
+    border-radius: 30px;
+    padding: 10px 30px;
+    transition: opacity 0.3s ease-in-out;
+    width: fit-content;
+    margin: 0 auto;
+    font-size: 15px;
+}
+
+/* The container for the ingredient input */
+.pantry {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+  padding: 1em 1em 0em 1em;
+  margin-top: 1em;
+  text-align: center;
+  border-radius: 1em;
+
+}
+
+input#ingredientInput{
+  text-align: left;
+  margin: 1em 1.5em 1.5em 1em;
+  min-width: 250px;
+  padding: 1em;
+  padding-left: 2em;
+  border-radius: 30px;
+  border: 1px solid #dcdcdc;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.05);
+}
+
+
+input#ingredientInput:focus-within{
+  box-shadow: 1px 1px 8px 1px #dcdcdc;
+  outline:none;
+ }
+
+
+
+.ingredientListContainer {
+    text-align: center;
+    max-width: 700px;
+    margin: 0 auto;
+    padding: 1em;
+}
+
+#searchError {
+  padding-top: 1.5em;
+}
+/* The ingredient List */
+ul {
+  color: #fff;
+  margin: 0 auto;
+  padding: 1em;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+}
+
+.addBorder {
+border-radius: 30px;
+border: 1px solid #dcdcdc;
+box-shadow: 0px 3px 15px rgba(0,0,0,0.05);
+}
+
+.listHeader {
+  padding: 0 0 1em 0;
+}
+
+.hidden {
+  display: none;
+}
+
+li {
+  display: inline-block;
+  padding: 1em;
+  border-radius: 30px;
+  margin: 0.5em;
+}
+
+ul#results-list {
+  justify-content: center;
+  color: #00476a;
+  max-width: 1300px;
+  text-align: center;
+}
+
+ul#currentIngredientList > li {
+  font-size: .8em;
+  border:1px solid #dcdcdc;
+  background-color:#1083bb;
+  cursor: pointer;
+  text-transform: lowercase;
+  transition: transform 0.3s ease-in-out;
+  -webkit-transition: transform 0.3s ease-in-out;
+}
+
+ul#currentIngredientList > li:hover {
+    transform: scale(0.95);
+}
+
+ul#results-list > li {
+  background-color: #fff;
+  width: 272px;
+  overflow: hidden;
+  text-align: center;
+  position: relative;
+}
+
+ul#results-list > li h3 {
+  /* padding-bottom: .5em; */
+}
+
+.recipeDescription {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+.fa-times {
+  padding-left: 0.5em;
+  transition: all 0.5s ease 0s;
+  -webkit-transition: all 0.5s ease 0s;
+}
+
+.fa-times:hover {
+  color: red;
+}
+
+.red {
+  color: #db6c2d !important;
+}
+
+.green {
+  color: green;
+}
+
+.green-button {
+    background-color: #3ba253;
+    color: white;
+    border: none;
+}
+
+.recipe-result img {
+  margin: 0 auto;
+  width: 100%;
+
+}
+
+.recipe-result p {
+  font-size: .9em;
+}
+
+.recipe-result p.missing-ingredients {
+  padding: 15px 0px;
+  position: absolute;
+  bottom: 0px;
+  left: 15px;
+  font-weight: 500;
+}
+
+.missing-ingredients {
+  color: #e9e9e9;
+}
+
+
+
+.recipe-name {
+  font-size: 1.45em;
+  text-transform: capitalize;
+  position: absolute;
+  bottom: 18%;
+  left: 15px;
+  margin: 0;
+  color: white;
+  padding: 5px 15px 5px 0px;
+  text-shadow: rgba(0, 0, 0, 0.29) 0px 0px 10px;
+  text-align: left;
+}
+
+.recipe-result {
+  border: 1px solid #dcdcdc;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+  border-radius: 20px;
+  padding: 0;
+  margin: 1em;
+}
+
+.recipe-result:hover {
+  cursor: pointer;
+}
+
+.recipe-image {
+  height: 180px;
+  /* display: block; */
+}
+
+
+.readyInMin {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  padding: .5em;
+  color: white;
+  font-weight: 300;
+  font-size: 1em;
+  text-shadow: rgba(0, 0, 0, 0.95) 0px 0px 10px;
+
+}
+.minutesText {
+  font-weight: 500;
+  display: inline-block;
+  margin-left: 4px;
+}
+
+
+div.loader {
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  padding-top: 2em;
+}
+
+div.loader p {
+  margin: 1em 0 0 0;
+}
+
+div.logo {
+  width: 100px;
+  height: 100px;
+  box-sizing: border-box;
+  position: relative;
+  background-color: white;
+}
+div.logo::before, div.logo::after {
+  z-index: 1;
+  box-sizing: border-box;
+  content: '';
+  position: absolute;
+  border: 4px solid transparent;
+  width: 0;
+  height: 0;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+div.logo::before {
+  top: 0;
+  left: 0;
+  animation: border-before 1.5s infinite;
+  animation-direction: alternate;
+}
+div.logo::after {
+  bottom: 0;
+  right: 0;
+  animation: border-after 1.5s infinite;
+  animation-direction: alternate;
+}
+div.logo > div {
+  position: absolute;
+  opacity: 0;
+}
+div.logo div.white {
+  border-left: 4px solid #373737;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  animation: white 1.5s infinite;
+  animation-direction: alternate;
+}
+div.logo div.orange {
+  border-top: 4px solid #373737;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 0;
+  background-color: #F3B93F;
+  animation: orange 1.5s infinite;
+  animation-direction: alternate;
+}
+div.logo div.red {
+  border-right: 4px solid #373737;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  background-color: #1083bb;
+  animation: red 1.5s infinite;
+  animation-direction: alternate;
+}
+
+@keyframes border-before {
+  0% {
+    width: 0;
+    height: 0;
+    border-top-color: #373737;
+    border-right-color: transparent;
+  }
+  12.49% {
+    border-right-color: transparent;
+  }
+  12.5% {
+    height: 0;
+    width: 100%;
+    border-top-color: #373737;
+    border-right-color: #373737;
+  }
+  25%,
+  100% {
+    width: 100%;
+    height: 100%;
+    border-top-color: #373737;
+    border-right-color: #373737;
+  }
+}
+@keyframes border-after {
+  0%,
+  24.99% {
+    width: 0;
+    height: 0;
+    border-left-color: transparent;
+    border-bottom-color: transparent;
+  }
+  25% {
+    width: 0;
+    height: 0;
+    border-left-color: transparent;
+    border-bottom-color: #373737;
+  }
+  37.49% {
+    border-left-color: transparent;
+    border-bottom-color: #373737;
+  }
+  37.5% {
+    height: 0;
+    width: 100%;
+    border-left-color: #373737;
+    border-bottom-color: #373737;
+  }
+  50%,
+  100% {
+    width: 100%;
+    height: 100%;
+    border-left-color: #373737;
+    border-bottom-color: #373737;
+  }
+}
+@keyframes red {
+  0%,
+  50% {
+    width: 0;
+    opacity: 0;
+  }
+  50.01% {
+    opacity: 1;
+  }
+  65%,
+  100% {
+    opacity: 1;
+    width: 27%;
+  }
+}
+@keyframes orange {
+  0%,
+  65% {
+    height: 0;
+    opacity: 0;
+  }
+  65.01% {
+    opacity: 1;
+  }
+  80%,
+  100% {
+    opacity: 1;
+    height: 50%;
+  }
+}
+@keyframes white {
+  0%,
+  75% {
+    width: 0;
+    opacity: 0;
+  }
+  75.01% {
+    opacity: 1;
+  }
+  90%,
+  100% {
+    opacity: 1;
+    width: 23%;
+  }
+}
+
+
+/* Modal Styling */
+/* demo only */
+.flex { display: flex; }
+.align-center { justify-content: center; }
+.align-vert,.align-vert.align-center { align-items: flex-end;}
+/* end demo */
+
+.modal {
+  display: none;
+  transition: all ease 1s;
+  color: rgb(51, 51, 51);
+  }
+.modal--show,
+.modal--hide {
+  display: flex;
+  transition: all ease 1s;
+} /* classes fired by js for animation control */
+
+/* This is on the wrapper for the whole modal */
+.modal--align {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 999;
+}
+
+.modal__container {
+  position: relative;
+  height: 90%;
+  width: 100%;
+  max-width: 600px;
+  max-height: 800px;
+  background: #fff;
+  border-radius: 20px;
+  overflow-y: scroll;
+  padding: 10px;
+  margin: auto;
+  margin-top: 5em;
+  padding-bottom: 2em;
+}
+
+/* The .modal__close class is used in js but is modified '--x' here */
+.modal__close--x {
+  font-size: 1em; /* this is only because we use unicode for the X in this case */
+  position: absolute;
+  top: 3px;
+  right: 10px;
+  color: lightgrey;
+  margin: 10px;
+}
+
+
+/* As there is no href to avoid the hash being added to the URL when clicked we add a pointer */
+/* This 'x' is hidden from screen readers as there is an accessible close button in the modal */
+.modal__close--x:hover {
+  cursor: pointer;
+  color: #545454;
+  transition: all ease .5s;
+}
+
+/* Animations */
+/* Open */
+.modal.modal--show {
+  animation: modal-open 0.3s;
+  transition: all ease 1s;
+
+}
+
+@keyframes modal-open {
+  0%    { opacity: 0; }
+  100%  { opacity: 1; }
+}
+
+/* Close */
+.modal.modal--hide {
+  animation: modal-close 0.5s;
+  transition: all ease 1s;
+
+}
+
+@keyframes modal-close {
+  0%    { opacity: 1; }
+  100%  { opacity: 0; }
+}
+
+.topHalf {
+  display: flex;
+  flex-direction: row;
+  margin: 1em;
+}
+
+.recipeImage img {
+  height: 150px;
+  width: 220px;
+  border-radius: 20px;
+  box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
+
+}
+
+.modal .recipeTitle h3{
+  color: rgb(51, 51, 51);
+  font-size: 1.55em;
+  text-transform: capitalize;
+  padding-bottom: .5em;
+}
+ .recipeHeader {
+   padding-left: 1em;
+   text-align: left;
+ }
+.usedIngredients {
+  text-transform: capitalize;
+  font-size: 16px;
+  line-height: 24px;
+  word-break: break-word;
+}
+
+.modal .recipeHeader .recipeTime,
+.modal .recipeHeader .recipeTitle h3 {
+  text-align: left;
+}
+
+.modal .recipeTime {
+  color: grey;
+}
+
+.modal .recipeInformation h3,
+.modal .recipeInstructions h3 {
+  font-size: 1.45em;
+  padding-bottom: .5em;
+  text-align: left;
+}
+
+.modal .recipeInformation,
+.modal .recipeInstructions {
+  margin: 1em;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.modal button {
+  font-size: .7em;
+}
+/* ul.usedIngredients > li {
+} */
+
+ul.usedIngredients,
+ol.recipeSteps {
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+  padding-bottom: 0;
+  padding-left: 10px;
+  padding-top: 0;
+  color: rgb(66, 66, 66);
+}
+
+ul.usedIngredients > li,
+ol.recipeSteps > li {
+  display: block;
+  text-align: left;
+  padding: 0;
+  list-style-type: disc;
+}
+
+ul.usedIngredients > li {
+  text-transform: lowercase;
+}
+
+ol.recipeSteps > li {
+  padding-bottom: 5px;
+  line-height: 24px;
+}
+
+ol.recipeSteps {
+  margin-bottom: 1em;
+}
+
+.pantry sub {
+  display: none;
+}
+
+.recipeImage {
+  display: none;
+}
+
+@media only screen and (min-width: 500px) {
+
+
+  .recipeImage {
+    display: block;
+  }
+
+  .pantry {
+    padding: 2em 5em 0em 5em;
+    margin-top: 2em;
+  }
+
+  .pantry sub {
+    display: block;
+  }
+
+  header h1 {
+    font-size: 3em;
+  }
+
+  input#ingredientInput {
+    margin: 2em 1em 1em 1em;
+    min-width: 300px;
+  }
+
+  ul#currentIngredientList > li {
+    font-size: 1em;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  .modal__container {
+    max-height: 80%;
+    padding: 20px;
+    margin: 16px;
+    padding-bottom: 1em;
+  }
+
+  .align-vert, .align-vert.align-center {
+    align-items: center;
+  }
+}
+
+@media only screen and (min-width: 370px) {
+  .ingredientListContainer {
+    padding: 1em 3em;
+  }
+}
+
+i.fa {
+    transition: all 0.2s ease 0s;
+    -webkit-transition: all 0.2s ease 0s;
+
+}
+i.fa-angle-double-up:hover {
+    transform: translateY(-3px);
+    cursor: pointer;
+}
+
+i.fa-angle-double-down {
+    margin-top: 20px;
+}
+i.fa-angle-double-down:hover {
+    transform: translateY(3px);
+    cursor: pointer;
+}
+
+.back-arrow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    margin: 15px;
+    color: lightgrey;
+}
+
+.back-arrow:hover {
+    color: darkgrey;
+    cursor: pointer;
 }
