--- a/src/Cookbook/Cookbook.css
+++ b/src/Cookbook/Cookbook.css
@@ -2,3 +2,9 @@ section {
     width: 100%;
     padding: 2% 3%;
 }
+
+@media only screen and (max-width: 480px) {
+    section {
+        padding: 2% 0;
+    }
+}
