--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -10,6 +10,7 @@
         height: 60px;
         box-shadow: 0 4px 30px rgba(87,94,111,0.1);
         width: 100%;
+        overflow-x: hidden;
     }
 
     .nav-item {
