--- a/src/SignUp/SignUp.css
+++ b/src/SignUp/SignUp.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:wght@300;400;500;600;700&display=swap');
 
+
+.animation {
+    width: 100%;
+    text-align: center;
+}
+
 .registration-form {
     width: 300px;
     position: absolute;
