--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,6 @@ button {
 
 
 button:hover {
-    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
     transform:scale(0.96)
 
 }
@@ -371,7 +370,7 @@ ul#results-list > li h3 {
   box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
   border-radius: 20px;
   padding: 0;
-  margin: 1em;
+  margin: 12px;
 }
 
 .recipe-result:hover {
